--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,32 @@
-body{
-    background-color: rgb(250,250,250);
+body {
+    background-color: rgba(180, 229, 233, 0.671);
 }
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+h2 {
+  
+  width: 100%;
+  color: rgb(34, 148, 34);
 }
+
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.image {
+  width: 370px;
+  margin-top: 50px;
+}
+  
+  @media only screen and (max-width: 770px) {
+    .container {
+      margin: 0 10%;
+    }
+  
+    .image {
+      width: 60%;
+      height: 60%;
+    }
+  }
+
+
