--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -2,18 +2,25 @@
     margin: 50px 0;
 
 }
+
 .card{
     margin: 0 2% !important;
+    
 }
 
 .infected{
-    border-bottom: 10px solid rgba(0,0,225,0.5);
+    border-bottom: 10px solid rgba(172, 113, 3, 0.5);
 }
-
 .recovered{
     border-bottom: 10px solid rgba(0,225,0,0.5);
 }
 
 .deaths{
     border-bottom: 10px solid rgba(225,0,0,0.5);
+}
+
+@media (max-witdh: 770x){
+    .card{
+        margin: 10%, 0px !important;
+    }
 }
